--- a/src/assets/components/products/Products.module.css
+++ b/src/assets/components/products/Products.module.css
@@ -23,7 +23,7 @@
     cursor: pointer;
 }
 
-.imege {
+.image {
     width: 261px;
     height: 261px;
     background-position: center;
@@ -56,7 +56,7 @@
 .like {
     background-image: url('../../../../public/icons/like.svg');
 }
-.lodading{
+.loading {
     margin: 0 auto;
     width: 100%;
 }
@@ -75,4 +75,8 @@
 }
 .stick:hover{
     background-color: rgb(14, 59, 31);
+}
+
+.active{
+    background-color: rgb(14, 59, 31);  
 }
